<resources>
    <string name="app_name">Bulletin Board</string>
    <string name="facebook_app_id">1034657839982863</string>
    <string name="thread_info_label">info</string>
    <string name="share_post_label">Share</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading_create_thread">New Thread</string>
    <string name="label_thread_name">Enter thread name here..</string>
    <string name="label_choose_photo">Choose a photo</string>
    <string name="label_thread_description">A small description about the group...</string>
    <string name="label_policies">Policies</string>
    <string name="label_moderators">Moderators</string>
    <string name="label_post_who">Who can post on the thread ?</string>
    <string name="checkbox_all_members">All Members</string>
    <string name="checkbox_moderators_only">Moderators only</string>
    <string name="checkbox_post_owners">Post Owners only</string>
    <string name="checkbox_owners_moderators">Owners &amp; moderators</string>
    <string name="label_add_members">Who can add members ?</string>
    <string name="label_who_edit_posts">Who can edit posts ?</string>
    <string name="label_add_moderators">Add moderators</string>
    <string name="label_add_members_hint">Add members</string>
    <string name="label_thumbs_up">Thumbs up</string>
    <string name="label_comments">Comments</string>
    <string name="label_read_more">Read more...</string>
    <string name="label_collapse">Collapse</string>

    <string name="help_text_1">Post images, thoughts, news articles \n and much more</string>
    <string name="help_text_2">Personalised timeline view for every user</string>
    <string name="help_text_3">Like, comment on posts that you like.\nYour friends will appreciate it</string>
    <string name="help_text_4">Share posts on facebook, twitter, emails \n directly from the app</string>
    <string name="help_text_5">Creating new thread takes less than 5 minutes</string>

    <string name="label_moderators_helpful_description">Moderators can manage your thread. They can add, remove posts, add participants, change your thread information. Choose one or more moderators.</string>

    <string name="string_quote">The world globes itself in a drop of dew.- Ralph Waldo Emerson </string>

    <string name="string_content_snippet">
        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and
        I will give you a complete account of the system,
    </string>

    <string name="string_content_full">
        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and
        I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth,
        the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure,
        but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful.
    </string>
</resources>
