<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccffcc"
    tools:context="in.sahilpatel.bulletinboard.activities.NewThreadActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_marginTop="?android:attr/actionBarSize"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/new_thread_container"
                android:layout_width="match_parent"
                android:theme="@style/BulletinBoardTheme"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_create_thread"
                    android:text="@string/heading_create_thread"
                    android:textColor="@color/heading_text_color"
                    android:textSize="@dimen/heading_text_size"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/layout_margin_heading_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/thread_information_container"
                    android:layout_below="@id/label_create_thread"
                    android:layout_marginTop="@dimen/layout_margin_heading_bottom"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/field_thread_name"
                        android:hint="@string/label_thread_name"
                        android:textSize="@dimen/text_size"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:orientation="horizontal">

                        <EditText
                            android:inputType="textUri"
                            android:id="@+id/field_thread_image_url"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:hint="@string/label_choose_photo"
                            android:textColorHint="@color/hint_text_color"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:id="@+id/button_choose_thread_image"
                            android:onClick="chooseImageFromGallery"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_add_a_photo_black_24dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/field_thread_description"
                        android:layout_marginTop="20dp"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:hint="@string/label_thread_description"
                        android:scrollbars="vertical"
                        android:gravity="top|left"
                        android:textSize="20dp"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <View
                    android:id="@+id/divider_thread_information"
                    android:layout_below="@id/thread_information_container"
                    style="@style/Divider"/>



                <LinearLayout
                    android:id="@+id/thread_policies_container"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:layout_below="@id/divider_thread_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_policies"
                        android:layout_marginLeft="@dimen/layout_heading_margin_left_right"
                        android:text="@string/label_policies"
                        android:textColor="@color/heading_text_color"
                        android:textSize="@dimen/subheading_text_size"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="@dimen/layout_margin_left_right"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/label_post_who"
                            android:text="@string/label_post_who"
                            android:textColor="@color/subheading_text_color"
                            android:textSize="@dimen/text_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:checked="true"
                                android:id="@+id/checkbox_post_who_all"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/checkbox_all_members"
                                android:textColor="@color/hint_text_color"
                                android:layout_height="wrap_content" />

                            <CheckBox
                                android:id="@+id/checkbox_post_who_moderators"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/checkbox_moderators_only"
                                android:textColor="@color/hint_text_color"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_marginLeft="@dimen/layout_margin_left_right"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/label_add_members_who"
                            android:text="@string/label_add_members"
                            android:textColor="@color/subheading_text_color"
                            android:textSize="@dimen/text_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:checked="true"
                                android:id="@+id/checkbox_add_who_all"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/checkbox_all_members"
                                android:textColor="@color/hint_text_color"
                                android:layout_height="wrap_content" />
                            <CheckBox
                                android:id="@+id/checkbox_add_who_moderators"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/checkbox_moderators_only"
                                android:textColor="@color/hint_text_color"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_marginLeft="@dimen/layout_margin_left_right"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/label_edit_post_who"
                            android:text="@string/label_who_edit_posts"
                            android:textColor="@color/subheading_text_color"
                            android:textSize="@dimen/text_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_marginLeft="15dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:checked="true"
                                android:id="@+id/checkbox_edit_who_owner"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/checkbox_post_owners"
                                android:textColor="@color/hint_text_color"
                                android:layout_height="wrap_content" />
                            <CheckBox
                                android:id="@+id/checkbox_edit_who_moderators"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:textSize="13sp"
                                android:text="@string/checkbox_owners_moderators"
                                android:textColor="@color/hint_text_color"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/divider_thread_policies"
                    android:layout_below="@id/thread_policies_container"
                    style="@style/Divider"/>

                <LinearLayout
                    android:id="@+id/thread_members_container"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:layout_below="@id/divider_thread_policies"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_members"
                        android:layout_marginLeft="@dimen/layout_heading_margin_left_right"
                        android:text="Members"
                        android:textColor="@color/heading_text_color"
                        android:textSize="@dimen/subheading_text_size"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_marginLeft="@dimen/layout_margin_left_right"
                        android:layout_marginRight="@dimen/layout_margin_left_right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/field_thread_members"
                            android:inputType="none"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:hint="@string/label_add_members_hint"
                            android:textColorHint="@color/hint_text_color"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:id="@+id/button_add_thread_members"
                            android:layout_weight="1"
                            android:src="@drawable/ic_person_add_black_24dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/divider_thread_members"
                    android:layout_below="@id/thread_members_container"
                    style="@style/Divider"/>

                <LinearLayout
                    android:id="@+id/thread_moderators_container"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:layout_below="@id/divider_thread_members"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_moderators"
                        android:layout_marginLeft="@dimen/layout_heading_margin_left_right"
                        android:text="Moderators"
                        android:textColor="@color/heading_text_color"
                        android:textSize="@dimen/subheading_text_size"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView

                        android:text="@string/label_moderators_helpful_description"
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_marginLeft="@dimen/layout_margin_left_right"
                        android:layout_marginRight="@dimen/layout_margin_left_right"
                        android:textColor="@color/subheading_text_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/layout_margin_top"
                        android:layout_marginLeft="@dimen/layout_margin_left_right"
                        android:layout_marginRight="@dimen/layout_margin_left_right"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:orientation="horizontal">

                        <EditText
                            android:inputType="none"
                            android:id="@+id/field_add_moderators"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:hint="@string/label_add_moderators"
                            android:textColorHint="@color/hint_text_color"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:id="@+id/button_add_moderators"
                            android:layout_weight="1"
                            android:src="@drawable/ic_add_black_24dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider_thread_moderators"
                    android:layout_below="@id/thread_moderators_container"
                    style="@style/Divider"/>

                <LinearLayout
                    android:layout_marginBottom="@dimen/layout_margin_top"
                    android:layout_marginLeft="@dimen/layout_margin_left_right"
                    android:layout_marginRight="@dimen/layout_margin_left_right"
                    android:layout_below="@id/divider_thread_moderators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/button_create_thread"
                        android:text="Create"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/button_cancel_create_thread"
                        android:text="Cancel"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
